development/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: development
  labels:
    name: ingress
  annotations:
    kubernetes.io.ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: "/development/backend/?(.*)"
            pathType: Prefix
            backend:
              service:
                name: backend-clusterip
                port:
                  number: 5000
          - path: "/development(.*)"
            pathType: Prefix
            backend:
              service:
                name: frontend-clusterip
                port:
                  number: 80
